added registration & login froms and routes

--- a/views/user-registration-form.handlebars
+++ b/views/user-registration-form.handlebars
@@ -1,8 +1,19 @@
-<h1>Journalist Registration</h1>
-<form action="/users/add" method="post">
-	<p>First Name:<br /><input type="text" name="first_name" placeholder="First name" value="" autocomplete="off" autofocus></p>
-	<p>Last Name:<br /><input type="text" name="last_name" placeholder="Last name" value="" autocomplete="off"></p>
-	<p>Email:<br /><input type="email" name="password" placeholder="Email" value="" autocomplete="off"></p>
-	<p>Password:<br /><input type="password" name="password" placeholder="Password" value="" autocomplete="off"></p>
-	<p><input type="submit" value="Add"></p>
-</form>
+<div id="content">
+	<!-- page content -->
+	<h2>Register</h2>
+	<form action="#" method="post">
+		<div class="form_settings">
+			<p><span>First Name:</span><input type="text" name="first_name" value="" /></p>
+			<br />
+			<p><span>Last Name:</span><input type="text" name="last_name" value="" /></p>
+			<br />
+			<p><span>Email:</span><input type="email" name="email" value="" /></p>
+			<br />
+			<p><span>Password:</span><input type="password" name="password" value="" /></p>
+			<br />
+			<p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="name" value="Register" /></p>
+			<br />
+			<br />
+		</div>
+	</form>
+</div>
