--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,69 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-    <head>
-         <meta charset="utf-8" />
-        <title>Local News</title>
-        <link rel="stylesheet" type="text/css" href="/css/styles.css">
-    </head>
-    <body>
+
+<head>
+  <title>Local News</title>
+  <meta name="description" content="site description" />
+  <meta name="keywords" content="site keywords, site keywords" />
+  <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
+  <link rel="stylesheet" type="text/css" href="../css/style.css" title="style" />
+</head>
+
+<body>
+  <div id="main">
+    <div id="header">
+      <div id="logo">
+        <div id="logo_text">
+          <!-- change text color -->
+          <h1><a href="index.html">Local<span class="logo_colour">News</span></a></h1>
+          <h2>Straight from the source.</h2>
+        </div>
+      </div>
+      <div id="menubar">
+        <ul id="menu">
+          <!-- navigation -->
+          <li class="selected"><a href="index.html">Home</a></li>
+          <li><a href="politics.html">Politics</a></li>
+          <li><a href="sports.html">Sports</a></li>
+          <li><a href="business.html">Business</a></li>
+		  <li><a href="entertainment.html">Entertainment</a></li>
+		  <li><a href="weather.html">Weather</a></li>
+        </ul>
+      </div>
+		  <div class="topright">
+			<a href="/users/login" id="topright">Login</a>
+			<a href="/users/register" id="topright">Register</a>
+		  </div>	  
+    </div>
+    <div id="site_content">
+      <div class="sidebar">
+        <!-- sidebar items -->
+        <h3>Search</h3>
+        <form method="post" action="#" id="search_form">
+          <p>
+            <input class="search" type="text" name="search_field" value="Enter keywords....." />
+            <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="../css/search.png" alt="Search" title="Search" />
+          </p>
+        </form>
+        <h3>Top Stories</h3>
+
+        <h3>Useful Links</h3>
+        <ul>
+          <li><a href="#">link 1</a></li>
+          <li><a href="#">link 2</a></li>
+          <li><a href="#">link 3</a></li>
+          <li><a href="#">link 4</a></li>
+        </ul>
+      </div>
+      <div id="content">
+	          <!-- page content -->
         {{{body}}}
-    </body>
+      </div>
+    </div>
+    <div id="content_footer"></div>
+    <div id="footer">
+      Copyright &copy; Local News | <a href="contact.html">Contact Us</a>
+    </div>
+  </div>
+</body>
 </html>
