added article and articles views

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -49,8 +49,8 @@
 
         <h3>Useful Links</h3>
         <ul>
-          <li><a href="#">link 1</a></li>
-          <li><a href="#">link 2</a></li>
+          <li><a href="/news/post">Post news item</a></li>
+          <li><a href="/admin/category">Add new category</a></li>
           <li><a href="#">link 3</a></li>
           <li><a href="#">link 4</a></li>
         </ul>
