used multer to upload images to the server & created routes to fetch all data from the db

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,8 +26,9 @@
           <li><a href="politics.html">Politics</a></li>
           <li><a href="sports.html">Sports</a></li>
           <li><a href="business.html">Business</a></li>
-		  <li><a href="entertainment.html">Entertainment</a></li>
-		  <li><a href="weather.html">Weather</a></li>
+          <li><a href="technology.html">Technology</a></li>
+		      <li><a href="entertainment.html">Entertainment</a></li>
+		      <li><a href="more.html">More</a></li>
         </ul>
       </div>
 		  <div class="topright">
@@ -51,7 +52,7 @@
         <ul>
           <li><a href="/news/post">Post news item</a></li>
           <li><a href="/admin/category">Add new category</a></li>
-          <li><a href="#">link 3</a></li>
+          <li><a href="/news/edit">Edit news article</a></li>
           <li><a href="#">link 4</a></li>
         </ul>
       </div>
