--- a/views/user-articles-list.handlebars
+++ b/views/user-articles-list.handlebars
@@ -1,7 +1,7 @@
 <div id="content">
    <!-- page content -->
    <h2>Latest News</h2>
-   {{#each articles}}
+   {{#each list}}
    <table>
       <tbody>
          <tr><td><img src="/article_images/{{this.image}}" alt="Article Image" width="50" height="40"></td><td><a href="">{{this.title}}</a></td></tr>
