--- a/views/view-article.handlebars
+++ b/views/view-article.handlebars
@@ -2,6 +2,11 @@
     <!-- page content -->
     {{#each article}}
        <h2>{{this.title}}</h2>
+       <p>{{this.createdAt}}</p>
+       <p>{{this.image}}</p>
+       <img src="/article_images/{{this.image}}" alt="Article Image" width="500" height="400">
+       <br />
+       <br />         
        <p>{{this.body}}</p>
     {{/each}}    
 </div>
