created a route to manage login session.  Also created a view for articles

--- a/views/articles-list.handlebars
+++ b/views/articles-list.handlebars
@@ -1,10 +1,10 @@
 <div id="content">
    <!-- page content -->
-   <h2>Latest News</h2>
-   {{#each articles}}
+   <h2 class="capitalize">{{title}}</h2>
+   {{#each list}}
    <table>
       <tbody>
-         <tr><td><img src="/article_images/{{this.image}}" alt="Article Image" width="50" height="40"></td><td><a href="">{{this.title}}</a></td></tr>
+         <tr><td><img src="/article_images/{{this.image}}" alt="Article Image" width="50" height="40"></td><td><a href="/news/single/{{this.id}}">{{this.title}}</a></td></tr>
       </tbody>
    </table>
    {{/each}}
