--- a/views/user-articles-list.handlebars
+++ b/views/user-articles-list.handlebars
@@ -4,7 +4,7 @@
    {{#each list}}
    <table>
       <tbody>
-         <tr><td><img src="/article_images/{{this.image}}" alt="Article Image" width="50" height="40"></td><td><a href="">{{this.title}}</a></td></tr>
+         <tr><td><img src="/article_images/{{this.image}}" alt="Article Image" width="50" height="40"></td><td><a href="/news/single/{{this.id}}">{{this.title}}</a></td></tr>
       </tbody>
    </table>
    {{/each}}
