--- a/views/user-registration-form.handlebars
+++ b/views/user-registration-form.handlebars
@@ -1,7 +1,7 @@
 <div id="content">
 	<!-- page content -->
 	<h2>Register</h2>
-	<form action="#" method="post">
+	<form action="" method="post">
 		<div class="form_settings">
 			<p><span>First Name:</span><input type="text" name="first_name" value="" /></p>
 			<br />
