--- a/views/login-form.handlebars
+++ b/views/login-form.handlebars
@@ -1,7 +1,7 @@
 <div id="content">
     <!-- page content -->
     <h2>Login</h2>
-    <form action="#" method="post">
+    <form action="" method="post">
         <div class="form_settings">
             <p><span>Email:</span><input type="email" name="email" value="" /></p>
             <br />
