--- a/views/post-news.handlebars
+++ b/views/post-news.handlebars
@@ -5,13 +5,13 @@
         <div class="form_settings">
             <p><span>Select News Category:</span>
                 <select id="id" name="category">
-                    <option value="category">--Select Category--</option>
-                    <option value="politics">Politics</option>
-                    <option value="sports">Sports</option>
-                    <option value="business">Business</option>
-                    <option value="technology">Technology</option>
-                    <option value="entertainment">Entertainment</option>
-                    <option value="weather">Weather</option>
+                    <option value="Category">--Select Category--</option>
+                    <option value="Politics">Politics</option>
+                    <option value="Sports">Sports</option>
+                    <option value="Business">Business</option>
+                    <option value="Technology">Technology</option>
+                    <option value="Entertainment">Entertainment</option>
+                    <option value="Weather">Weather</option>
                 </select>
             </p>
             <br />
