--- a/views/category-form.handlebars
+++ b/views/category-form.handlebars
@@ -1,5 +1,6 @@
 <div id="content">
 	<!-- page content -->
+    <a href="/admin/category">Add new category</a> | <a href="/admin/categories">View Categories</a> | <a href="/news/post">Post news item</a> | <a href="/admin">View Articles</a>	
 	<h2>Add Category</h2>
 	<form action="/admin/add-category" method="post">
 		<div class="form_settings">
