--- a/views/news-edit.handlebars
+++ b/views/news-edit.handlebars
@@ -1,45 +1,48 @@
 <div id="content">
-    <!-- page content -->
-    <h2>Edit your post</h2>
-    <form method="post" enctype="multipart/form-data" action="/news/single/{{article.id}}/edit">
-        <div class="form_settings">
-            <p><span>Select News Category:</span>
-                <select id="id" name="category">
-                    <option value="category">{{article.category}}</option>
-                    <option value="category">--Select Category--</option>
-                    <option value="politics">Politics</option>
-                    <option value="sports">Sports</option>
-                    <option value="business">Business</option>
-                    <option value="technology">Technology</option>
-                    <option value="entertainment">Entertainment</option>
-                    <option value="weather">Weather</option>
-                </select>
-            </p>
-            <br/>
-            <p>
-                <span>Title:</span>
-                <input type="text" name="title" value="{{article.title}}" />
-            </p>
-            <br/>
-            <p>
-                <span>Add your news text here:</span>
-                <textarea rows="40" cols="60" name="body">{{article.body}}</textarea>
-            </p>
-            <br/>
-            <br/>
-            <p>
-                <img src="/article_images/{{article.image}}" />
-            </p>
-            <p>
-                <span>Upload Image:</span>
-                <input type="file" name="imagefile" id="file-select"/></p>
-            <br/>
-            <p style="padding-top: 15px">
-                <span>&nbsp;</span>
-                <input class="submit" type="submit" name="name" value="Edit" />
-            </p>
-            <br />
-            <br />
-        </div>
-    </form>
+  <!-- page content -->
+  <h2>Edit your post</h2>
+  <form method="post" enctype="multipart/form-data" action="/news/single/{{article.id}}/edit">
+    <div class="form_settings">
+      <p><span>Select News Category:</span>
+        <select id="id" name="category">
+          <option value="category">{{article.category}}</option>
+          <option value="category">--Select Category--</option>
+          {{#each categories}}
+          <option value="{{this.dataValues.title}}">{{this.dataValues.title}}</option>
+          {{/each}}
+          {{!-- <option value="politics">Politics</option>
+          <option value="sports">Sports</option>
+          <option value="business">Business</option>
+          <option value="technology">Technology</option>
+          <option value="entertainment">Entertainment</option>
+          <option value="weather">Weather</option> --}}
+        </select>
+      </p>
+      <br />
+      <p>
+        <span>Title:</span>
+        <input type="text" name="title" value="{{article.title}}" />
+      </p>
+      <br />
+      <p>
+        <span>Add your news text here:</span>
+        <textarea rows="40" cols="60" name="body">{{article.body}}</textarea>
+      </p>
+      <br />
+      <br />
+      <p>
+        <img src="/article_images/{{article.image}}" />
+      </p>
+      <p>
+        <span>Upload Image:</span>
+        <input type="file" name="imagefile" id="file-select" /></p>
+      <br />
+      <p style="padding-top: 15px">
+        <span>&nbsp;</span>
+        <input class="submit" type="submit" name="name" value="Edit" />
+      </p>
+      <br />
+      <br />
+    </div>
+  </form>
 </div>
