--- a/views/open-article.handlebars
+++ b/views/open-article.handlebars
@@ -1,9 +1,10 @@
 <div id="content">
     <!-- page content -->
        <h2>{{item.title}}</h2>
-       <p>{{item.createdAt}}</p>
+       <p>By:  <b>{{author}}</b></p>
+       <p>{{publishedDate}} </p>
        <img src="/article_images/{{item.image}}" alt="Article Image" width="500" height="400">
        <br />
-       <br />         
-       {{{body}}}  
+       <br />
+       {{{body}}}
 </div>
