--- a/views/articles-list.handlebars
+++ b/views/articles-list.handlebars
@@ -1,11 +1,11 @@
-<div id="content">
-   <!-- page content -->
-   <h2 class="capitalize">{{title}}</h2>
-   {{#each list}}
-      <table>
-         <tbody>
-            <tr><td><img src="/article_images/{{this.image}}" alt="Article Image" width="50" height="40"></td><td><a href="/news/single/{{this.id}}">{{this.title}}</a></td></tr>
-         </tbody>
-      </table>
-   {{/each}}
-</div>
+<h2 class="capitalize">{{title}}</h2>
+{{#each list}}
+<table>
+  <tbody>
+    <tr>
+      <td><img src="/article_images/{{this.image}}" alt="Article Image" width="50" height="40"></td>
+      <td><a href="/news/article/{{this.id}}">{{this.title}}</a></td>
+    </tr>
+  </tbody>
+</table>
+{{/each}}
