--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,16 +24,21 @@
           <!-- navigation -->
           <li class="selected"><a href="/">Home</a></li>
           {{#each categories}}
-          <li><a href="/news/category/{{this.dataValues.title}}">{{this.dataValues.title}}</a></li>
+          <li><a href="/news/{{this.dataValues.title}}">{{this.dataValues.title}}</a></li>
           {{/each}}
         </ul>
       </div>
       <div class="topright">
-        {{#if logout}}
+        {{#if logged_out}}
         <a href="/users/login" id="topright">Login</a>
         <a href="/users/register" id="topright">Register</a>
         {{else}}
-        <a href="/logout" id="topright">Logout</a>
+        {{#if admin_user }}
+        <a href="/admin/news" id="topright">Admin Dashboard</a>
+        {{else}}
+        <a href="/users/dashboard" id="topright">Your Dashboard</a>
+        {{/if}}
+        <a href="/users/logout" id="topright">Logout</a>
         {{/if}}
       </div>
     </div>
@@ -56,7 +61,7 @@
             </div>
             <div>
               <p>{{this.dataValues.title}}</p>
-              <a href="/news/single/{{this.dataValues.id}}">Read this story here</a>
+              <a href="/news/article/{{this.dataValues.id}}">Read this story here</a>
             </div>
           </li>
           {{/each}}
