--- a/views/login-form.handlebars
+++ b/views/login-form.handlebars
@@ -1,14 +1,10 @@
-<div id="content">
-    <!-- page content -->
-    <h2>Login</h2>
-    <form action="" method="post">
-        <div class="form_settings">
-            <p><span>Email:</span><input type="email" name="email" value="" /></p>
-            <br />
-            <p><span>Password:</span><input type="password" name="password" value="" /></p>
-            <br />
-            <p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="name" value="Login" /></p>
-        </div>
-    </form>
-</div>
-</div>
+<h2>Login</h2>
+<form action="/users/login" method="post">
+    <div class="form_settings">
+        <p><span>Email:</span><input type="email" name="email" value="" /></p>
+        <br />
+        <p><span>Password:</span><input type="password" name="password" value="" /></p>
+        <br />
+        <p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="name" value="Login" /></p>
+    </div>
+</form>
