--- a/views/post-news.handlebars
+++ b/views/post-news.handlebars
@@ -1,27 +1,24 @@
-<div id="content">
-  <!-- page content -->
-  <h2>Add your post</h2>
-  <form method="post" enctype="multipart/form-data" action="/news/add-news">
-    <div class="form_settings">
-      <p><span>Select News Category:</span>
-        <select id="id" name="category">
-          <option value="Category">--Select Category--</option>
-          {{#each categories}}
-          <option value="{{this.dataValues.title}}">{{this.dataValues.title}}</option>
-          {{/each}}
-        </select>
-      </p>
-      <br />
-      <p><span>Title:</span><input type="text" name="title" value="" /></p>
-      <br />
-      <p><span>Add your news text here:</span><textarea rows="40" cols="60" name="body"></textarea></p>
-      <br />
-      <br />
-      <p><span>Upload Image:</span><input type="file" name="image_file" id="file-select" /></p>
-      <br />
-      <p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="name" value="Post" /></p>
-      <br />
-      <br />
-    </div>
-  </form>
-</div>
+<h2>Add your post</h2>
+<form method="post" enctype="multipart/form-data" action="/news/add-new">
+  <div class="form_settings">
+    <p><span>Select News Category:</span>
+      <select id="id" name="category">
+        <option value="Category">--Select Category--</option>
+        {{#each categories}}
+        <option value="{{this.dataValues.title}}">{{this.dataValues.title}}</option>
+        {{/each}}
+      </select>
+    </p>
+    <br />
+    <p><span>Title:</span><input type="text" name="title" value="" /></p>
+    <br />
+    <p><span>Add your news text here:</span><textarea rows="40" cols="60" name="body"></textarea></p>
+    <br />
+    <br />
+    <p><span>Upload Image:</span><input type="file" name="image_file" id="file-select" /></p>
+    <br />
+    <p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="name" value="Post" /></p>
+    <br />
+    <br />
+  </div>
+</form>
