--- a/views/user-articles-list.handlebars
+++ b/views/user-articles-list.handlebars
@@ -1,17 +1,14 @@
-<div id="content">
-   <!-- page content -->
-   <a href="/news/post">Post news item</a>
-   <h2>My News</h2>
-   {{#each articles}}
-   <table>
-      <tbody>
-         <tr>
-            <td><img src="/article_images/{{this.image}}" alt="Article Image" width="50" height="40"></td>
-            <td><a href="/news/single/{{this.id}}">{{this.title}}</a></td>
-            <td><a href="/news/single/{{this.id}}/edit">Edit</a></td>
-            <td><a href="/news/single/{{this.id}}/delete">delete</a></td>
-         </tr>
-      </tbody>
-   </table>
-   {{/each}}
-</div>
+<a href="/news/add-new">Post news item</a>
+<h2>My News</h2>
+{{#each articles}}
+<table>
+  <tbody>
+    <tr>
+      <td><img src="/article_images/{{this.image}}" alt="Article Image" width="50" height="40"></td>
+      <td><a href="/news/article/{{this.id}}">{{this.title}}</a></td>
+      <td><a href="/news/article/{{this.id}}/edit">Edit</a></td>
+      <td><a href="/news/article/{{this.id}}/delete">delete</a></td>
+    </tr>
+  </tbody>
+</table>
+{{/each}}
