--- a/views/user-registration-form.handlebars
+++ b/views/user-registration-form.handlebars
@@ -1,19 +1,16 @@
-<div id="content">
-	<!-- page content -->
-	<h2>Register</h2>
-	<form action="" method="post">
-		<div class="form_settings">
-			<p><span>First Name:</span><input type="text" name="first_name" value="" /></p>
-			<br />
-			<p><span>Last Name:</span><input type="text" name="last_name" value="" /></p>
-			<br />
-			<p><span>Email:</span><input type="email" name="email" value="" /></p>
-			<br />
-			<p><span>Password:</span><input type="password" name="password" value="" /></p>
-			<br />
-			<p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="name" value="Register" /></p>
-			<br />
-			<br />
-		</div>
-	</form>
-</div>
+<h2>Register</h2>
+<form action="/users/register" method="post">
+  <div class="form_settings">
+    <p><span>First Name:</span><input type="text" name="first_name" value="" /></p>
+    <br />
+    <p><span>Last Name:</span><input type="text" name="last_name" value="" /></p>
+    <br />
+    <p><span>Email:</span><input type="email" name="email" value="" /></p>
+    <br />
+    <p><span>Password:</span><input type="password" name="password" value="" /></p>
+    <br />
+    <p style="padding-top: 15px"><span>&nbsp;</span><input class="submit" type="submit" name="name" value="Register" /></p>
+    <br />
+    <br />
+  </div>
+</form>
